--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
+
+* {
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 
 }
+
 .nav {
   font-size: 18px;
   padding: 0px 32px;
   color: #7e7e8d;
 }
-.all-btn{
+
+.all-btn {
   background-color: #ff7e84;
   padding: 15px 32px;
   font-size: 18px;
@@ -21,55 +24,105 @@
   color: #ffff;
   border: none;
   border-radius: 10px;
- transition: 0.2s all linear;
+  transition: 0.2s all linear;
 }
+
 /* .all-btn:hover{
-  border: 3px solid #ff7e84;
- 
+  outline: 3px solid #ff7e84;
 } */
- .home-bg{
+.home-bg {
   background-image: url('../public/images/back.png');
   background-repeat: no-repeat;
   height: 100vh;
- 
- }
- .title{
+
+}
+
+.title {
   font-size: 82px;
- 
- }
- .home-description {
+
+}
+
+.home-description {
   color: #30bead;
- }
- .home-img img{
+}
+
+.home-img img {
   position: absolute;
   bottom: 0px;
   height: auto;
   max-width: 100%;
   top: 150px;
- }
- .content-home{
+}
+
+.content-home {
   font-size: 20px;
   color: #7e7e8d;
   margin: 32px 0px 0px 0px;
- }
- .box{
+}
+
+.box {
   padding: 20px;
   /* border: 1px solid rgb(245, 243, 243); */
   background-color: #ffffff;
   border-radius: 7px;
   margin-top: 40px;
- }
- .home-input{
+}
+
+.home-input {
   border: none;
   color: #7e7e8d;
- }
- input:focus{
+}
+
+input:focus {
   outline: none;
- }
- .home-icon{
+}
+
+.home-icon {
   color: #7e7e8d;
   font-size: 20px;
- }
- .padding{
+}
+
+.padding {
   padding: 130px 0px;
- }
+}
+
+.shape-bg {
+  --tw-text-opacity: 1;
+  background-image: url(https://bestwpware.com/react-templates/edumim/static/media/line-shape.5ab619cc708231a39fcf.svg);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  color: rgb(255 126 132 / var(--tw-text-opacity));
+  display: inline-block;
+  padding-bottom: .5rem;
+}
+
+.circle-icon {
+  height: 72px;
+  width: 72px;
+}
+
+.bg-circle {
+  background-color: #e3f9f6;
+}
+
+.feture-sec {
+  background-image: url('https://bestwpware.com/react-templates/edumim/static/media/section-bg-1.e7e00963e2f1b1da3314.png');
+}
+/* .card img{
+  width: 100%;
+  height: 200px;
+} */
+.card-title {
+  font-weight: 700;
+  color: #41c3b4;
+  font-size: 24px;
+  margin: 0px 0px 12px;
+}
+
+.card-text {
+  color: #0c1327;
+  font-size: 20px;
+  margin: 0px 0px 12px;
+  font-weight: 700;
+}
